# irpc

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml
.github/workflows/: ci.yml
examples/: compute.rs  derive.rs  local.rs  modularize.rs  nested.rs  rate_limit.rs  storage.rs  stream.rs
irpc-bench/: Cargo.toml
irpc-bench/src/: main.rs
irpc-derive/: Cargo.toml
irpc-derive/src/: lib.rs
irpc-derive/tests/: smoke.rs
irpc-derive/tests/compile_fail/: duplicate_type.rs  extra_attr_types.rs  multiple_fields.rs  named_enum.rs  wrong_attr_types.rs
irpc-iroh/: Cargo.toml
irpc-iroh/examples/: 0rtt.rs  auth.rs  derive-auth.rs  derive.rs  rate-limit.rs  remote-and-local.rs  server-actor.rs  server-shared-state.rs  simple.rs  span_propagation.rs
irpc-iroh/src/: lib.rs  tests.rs
irpc-iroh/tests/: span_propagation_concurrent.rs
irpc-uds/: Cargo.toml  README.md
irpc-uds/examples/: uds-demo.rs
irpc-uds/src/: lib.rs  plaintext.rs  socket.rs
irpc-uds/tests/: rpc.rs
src/: channel.rs  lib.rs  rpc.rs  span_propagation.rs  tests.rs  util.rs
src/channel/: mpsc.rs  none.rs  oneshot.rs
tests/: common.rs  derive.rs  mpsc_channel.rs  mpsc_sender.rs  oneshot_channel.rs
tests/compile_fail/: duplicate_type.rs  extra_attr_types.rs  extra_attr_types.stderr  multiple_fields.rs  named_enum.rs  non_enum.rs  wrong_attr_types.rs  wrong_attr_types.stderr
