[package]
name = "irpc-iroh"
version = "0.10.0"
edition = "2021"
authors = ["Rüdiger Klaehn <rklaehn@protonmail.com>", "n0 team"]
keywords = ["api", "protocol", "network", "rpc"]
categories = ["network-programming"]
license = "Apache-2.0/MIT"
repository = "https://github.com/n0-computer/irpc"
description = "Iroh transport for irpc"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { workspace = true }
iroh = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true, features = ["alloc", "use-std"] }
n0-future = { workspace = true }
irpc = { version = "0.10.0", path = ".." }
iroh-base.workspace = true

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
n0-future = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt"] }
irpc-derive = { version = "0.8.0", path = "../irpc-derive" }
clap = { version = "4.5.41", features = ["derive"] }
futures-util.workspace = true
hex = "0.4.3"
rand = "0.9.2"
