[package]
name = "irpc-iroh"
version = "0.14.0"
edition = "2024"
authors = ["Rüdiger Klaehn <rklaehn@protonmail.com>", "n0 team"]
keywords = ["api", "protocol", "network", "rpc"]
categories = ["network-programming"]
license = "Apache-2.0/MIT"
repository = "https://github.com/n0-computer/irpc"
description = "Iroh transport for irpc"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
iroh = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true, features = ["alloc", "use-std"] }
n0-error = { workspace = true }
n0-future = { workspace = true }
irpc = { version = "0.14.0", path = ".." }
iroh-base.workspace = true

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
n0-future = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt"] }
irpc-derive = { version = "0.11.0", path = "../irpc-derive" }
clap = { version = "4.5.41", features = ["derive"] }
futures-util.workspace = true
hex = "0.4.3"
rand = "0.9.2"
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
n0-tracing-test = "0.3.0"
opentelemetry = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["testing"] }
opentelemetry-otlp = { version = "0.31.0", default-features = false, features = ["http-proto", "reqwest-blocking-client", "trace"] }
tracing-opentelemetry = "0.32.1"

[features]
default = []
tracing-opentelemetry = ["irpc/tracing-opentelemetry"]
